# ai-validator-service

./: .gitignore  README.md  justfile  pyproject.toml
.proto/: moderation.proto
configs/: dev.yaml  prod.yaml
data/: augment_dataset.py  prepare_dataset.py
data/datasets/: russian_dataset_2.tsv  russian_distorted_toxicity.tsv
logger/: custom_logger.py
models/deberta-toxicity/: quantization.py
src/aivalidatorservice/: constants.py  server.py  settings.py
src/aivalidatorservice/grpc/: moderation_pb2.py  moderation_pb2.pyi  moderation_pb2_grpc.py
src/aivalidatorservice/handler/: handler.py  moderate.py
src/aivalidatorservice/logger/: custom_logger.py
src/aivalidatorservice/model/: loader.py
src/aivalidatorservice/repository/: model.py
src/aivalidatorservice/service/: moderate.py  service.py
src/aivalidatorservice/trainer/: train.py
tests/: conftest.py  test-sentences.txt
tests/behavioral/: test_golden_path.py
tests/contract/: test_grpc_contract.py
tests/tokenizer/: test_tokenizer_shapes.py
tools/: common.just
trainer/: ai-validator-model-pipeline-google-colab.ipynb  google_colab_train.py  onnx_exporter.py  quantizer.py  train.py  train_qat.py
