[project]
name = "ai-validator-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "esclient", email = "-"},
]
dependencies = ["grpcio==1.75.1", "transformers==4.52.4", "tokenizers==0.21.1", "grpcio-reflection==1.75.1", "pydantic==2.11.9", "pydantic-settings==2.11.0", "psycopg2-binary==2.9.10", "watchfiles==1.1.0", "asyncpg>=0.30.0", "PyPika>=0.51.1", "grpcio-tools==1.75.1", "grpc-stubs==1.53.0.6", "protobuf==6.32.1", "pytest==8.4.2", "pytest-asyncio==0.24.0", "pytest-cov==5.0.0", "pytest-mock==3.15.1", "pytest-faker==2.0.0", "Faker==37.11.0", "black==25.9.0", "isort==6.0.1", "flake8==7.3.0", "flake8-pyproject==1.2.3", "ruff==0.13.2", "mypy==1.18.2", "types-protobuf==6.32.1.20250918", "types-psycopg2==2.9.21.20250915", "scikit-learn>=1.6.1"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GNU GENERAL PUBLIC LICENSE"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "datasets==3.6.0",
    "pandas==2.3.0",
    "pyarrow==20.0.0",
]
