[tool.black]
line-length = 79
target-version = ["py313"]
skip-string-normalization = false
exclude = '''
/(
  \.git
  | \.hg
  | \.venv
  | venv
  | build
  | dist
  | src/aivalidatorservice/grpc
  | trainer/google_colab_train.py
  | trainer/ai-validator-model-pipeline-google-colab.ipynb
)/
'''

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["app"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "src/aivalidatorservice/grpc", "trainer/google_colab_train.py", "trainer/ai-validator-model-pipeline-google-colab.ipynb"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:T20,ARG001"
]
exclude = [
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "src/aivalidatorservice/grpc",
  "trainer/google_colab_train.py",
  "trainer/ai-validator-model-pipeline-google-colab.ipynb"
]

[tool.ruff]
line-length = 120
target-version = "py313"
preview = true
exclude = [".venv", "build", "dist", "src/aivalidatorservice/grpc", "trainer/google_colab_train.py", "trainer/ai-validator-model-pipeline-google-colab.ipynb"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "UP",
    "SIM",
    "T20",
    "ARG",
    "C4",
    "RUF"
]
ignore = [
    "E203",
    "B008",
    "SIM105",
    "RUF001",
    "RUF100",
    "RUF003",
    "RUF002"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20", "ARG001"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = [
    'src(?:[/\\])aivalidatorservice(?:[/\\])grpc',
    'trainer(?:[/\\])google_colab_train\.py',
    'trainer(?:[/\\])ai-validator-model-pipeline-google-colab\.ipynb',
]
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
explicit_package_bases = true
mypy_path = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src/aivalidatorservice"]
relative_files = true

[tool.coverage.report]
include = [
    "src/aivalidatorservice/handler/*",
    "src/aivalidatorservice/service/*",
]
omit = ["src/aivalidatorservice/server.py"]


[project]
name = "ai-validator-service"
version = "0.1.0"
description = "Default template for PDM package"
dependencies = [
    "scipy>=1.14.0",
    "grpcio==1.75.1",
    "transformers>=4.57.6",
    "tokenizers>=0.21.4",
    "grpcio-reflection==1.75.1",
    "pydantic==2.11.9",
    "pydantic-settings==2.11.0",
    "psycopg2-binary==2.9.10",
    "watchfiles==1.1.0",
    "asyncpg>=0.30.0",
    "PyPika>=0.51.1",
    "scikit-learn>=1.6.1",
    "torch>=2.7.1",
    "optimum[onnxruntime]>=2.1.0",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
    "huggingface-hub>=0.36.2",
    "onnxruntime>=1.25.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GNU GENERAL PUBLIC LICENSE"}

[tool.pdm]
distribution = true

[project.scripts]
run-server = "aivalidatorservice.server:main"

[dependency-groups]
dev = [
    "grpcio-tools==1.75.1",
    "grpc-stubs==1.53.0.6",
    "protobuf==6.32.1",
    "pytest>=8.4.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.15.1",
    "pytest-faker==2.0.0",
    "Faker==37.11.0",
    "black==25.9.0",
    "isort==6.0.1",
    "flake8==7.3.0",
    "flake8-pyproject>=1.2.4",
    "ruff==0.13.2",
    "mypy==1.18.2",
    "types-protobuf==6.32.1.20250918",
    "types-psycopg2==2.9.21.20250915",
    "datasets==3.6.0",
    "pandas==2.3.0",
    "pyarrow==20.0.0",
]
quantize = [
    "torch>=2.7.1",
    "optimum[onnxruntime-gpu]>=2.1.0",
]